# actix-web-diesel

./: Cargo.toml  README.md  run-dev.sh  ubuntu-dependencies.sh
migrations/2023-02-11-122110_create_todos/: down.sql  up.sql
src/: cors.rs  db.rs  handler.rs  main.rs  model.rs  postgres.rs  schema.rs
src/user/: model.rs  routes.rs
