[package]
name = "actix-web-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
